--- a/ceeq/apps/projects/templates/projects.html
+++ b/ceeq/apps/projects/templates/projects.html
@@ -46,7 +46,7 @@
                                         No evaluate
                                     {% else %}
                                         {% if superuser %}
-                                            <a href="{% url 'project_defects_density' project.id %}"> {{ project.score }}</a>
+                                            <a href="{% url 'project_defects_density' project.id %}"> {{ project.score |floatformat:2 }}</a>
                                             <a href="{% url 'defects_density_log' project.id %}">DD Log</a>
                                         {% else %}
                                             {{ project.score }}
