Defect density history data stored

--- a/ceeq/apps/projects/templates/project_dd_trend.html
+++ b/ceeq/apps/projects/templates/project_dd_trend.html
@@ -9,8 +9,16 @@
         </div>
 
         {% for project_dd in project_dds %}
-            {{ project_dd.project }}: {{ project_dd.created }}, {{ project_dd.version }}
-            {{ project_dd.cdrFeeds }}
+            Name: {{ project_dd.project }}<br>
+            Date: {{ project_dd.created }}<br>
+            Version: {{ project_dd.version }}<br>
+            CDR Feeds: {{ project_dd.cdrFeeds }}<br>
+            CXP: {{ project_dd.cxp }}<br>
+            Outbound: {{ project_dd.outbound }}<br>
+            Platform: {{ project_dd.platform }}<br>
+            Reports: {{ project_dd.reports }}<br>
+            Voice Apps: {{ project_dd.voiceApps }}<br>
+            ----------------------------------<br>
         {% endfor %}
 
 
