--- a/ceeq/apps/projects/templates/projects.html
+++ b/ceeq/apps/projects/templates/projects.html
@@ -8,9 +8,9 @@
                     <small>
                         {% if superuser %}
                             <i class="fa fa-pencil"></i> Create a <a href="{% url 'project_new' %}"> New Project </a> &nbsp; | &nbsp;
+                            <i class="fa fa-cloud-upload"></i><a href="{% url 'defects_density_log' 1000000 %}"> Log All DDs</a> &nbsp; | &nbsp;
                         {% endif %}
-                        <i class="fa fa-refresh"></i><a href="{% url 'project_update_scores' 1000000 %}" id="update_all"> Update All Scores</a> &nbsp; | &nbsp;
-                        <i class="fa fa-cloud-upload"></i><a href="{% url 'defects_density_log' 1000000 %}"> Log All DDs</a>
+                        <i class="fa fa-refresh"></i><a href="{% url 'project_update_scores' 1000000 %}" id="update_all"> Update All Scores</a>
                     </small>
                 </div>
                 <div class="col-md-2">
