--- a/ceeq/apps/projects/templates/projects.html
+++ b/ceeq/apps/projects/templates/projects.html
@@ -8,7 +8,7 @@
                     <small>
                         {% if superuser %}
                             <i class="fa fa-pencil"></i> Create a <a href="{% url 'project_new' %}"> New Project </a> &nbsp; | &nbsp;
-                            <i class="fa fa-cloud-upload"></i><a href="{% url 'defects_density_log' 1000000 %}"> Log All DDs</a> &nbsp; | &nbsp;
+                            <i class="fa fa-cloud-upload"></i><a href="{% url 'defects_density_log' 1000000 %}" id="dd_log_all"> Log All DDs</a> &nbsp; | &nbsp;
                         {% endif %}
                         <i class="fa fa-refresh"></i><a href="{% url 'project_update_scores' 1000000 %}" id="update_all"> Update All Scores</a>
                     </small>
@@ -47,7 +47,7 @@
                                     {% else %}
                                         {% if superuser %}
                                             <a href="{% url 'project_defects_density' project.id %}"> {{ project.score |floatformat:2 }}</a>
-                                            <a href="{% url 'defects_density_log' project.id %}">DD Log</a>
+                                            <a href="{% url 'defects_density_log' project.id %}" onclick="$('#throbber').show();">DD Log</a>
                                         {% else %}
                                             {{ project.score }}
                                         {% endif %}
