fix jquery can't handle periods, colons, and whitespace as <div> name

--- a/ceeq/apps/projects/templates/project_dd_trend.html
+++ b/ceeq/apps/projects/templates/project_dd_trend.html
@@ -10,9 +10,9 @@
 
 
 
-        {% for item in dd_trend_data %}
-            <h3>Version: {{ item.version }}</h3>
-            <div id="dd_trend_graph_{{ item.version }}"></div>
+        {% for version_name in version_names %}
+            <h3>Version: {{ version_name }}</h3>
+            <div id="dd_trend_graph_{{ version_name }}"></div>
         {% endfor %}
 
         <div id="version_key"></div>
