--- a/ceeq/apps/projects/templates/project_dd_detail.html
+++ b/ceeq/apps/projects/templates/project_dd_detail.html
@@ -4,7 +4,7 @@
         <div class="row">
             <legend>Project Information</legend>
             <p><strong>Project Name: </strong>{{ project.name }}</p>
-            <p><strong>Project Score:</strong>{{ project.score }}</p>
+            <p><strong>CEEQ Score: &nbsp;&nbsp;</strong>{{ project.score }}</p>
             <br>
         </div>
 
