--- a/ceeq/apps/projects/templates/projects.html
+++ b/ceeq/apps/projects/templates/projects.html
@@ -8,8 +8,8 @@
                     <small>
                         {% if superuser %}
                             <i class="fa fa-pencil"></i> Create a <a href="{% url 'project_new' %}"> New Project </a> &nbsp; | &nbsp;
-                            <i class="fa fa-cloud-upload"></i><a href="{% url 'defects_density_log' 1000000 %}" id="dd_log_all"> Log All DDs</a> &nbsp; | &nbsp;
                         {% endif %}
+                            <i class="fa fa-cloud-upload"></i><a href="{% url 'defects_density_log' 1000000 %}" id="dd_log_all"> Log All DDs</a> &nbsp; | &nbsp;
                         <i class="fa fa-refresh"></i><a href="{% url 'project_update_scores' 1000000 %}" id="update_all"> Update All Scores</a>
                     </small>
                 </div>
@@ -45,11 +45,10 @@
                                     {% elif project.score == -9 %}
                                         No evaluate
                                     {% else %}
+                                        <a href="{% url 'project_defects_density' project.id %}"> {{ project.score |floatformat:2 }}</a>
                                         {% if superuser %}
-                                            <a href="{% url 'project_defects_density' project.id %}"> {{ project.score |floatformat:2 }}</a>
-                                            <a href="{% url 'defects_density_log' project.id %}" onclick="$('#throbber').show();">DD Log</a>
-                                        {% else %}
-                                            {{ project.score }}
+                                            <i class="fa fa-indent"></i>
+                                            <a href="{% url 'defects_density_log' project.id %}" onclick="$('#throbber').show();"> Log</a>
                                         {% endif %}
                                     {% endif %}
                                 </td>
