defects density history record deletion

--- a/ceeq/apps/defects_density/templates/dd_list.html
+++ b/ceeq/apps/defects_density/templates/dd_list.html
@@ -2,7 +2,7 @@
 {% block body %}
     <h4>Project Defects Density </h4>
     <div class="container">
-        <table class="table table-striped tabl-hover table-condensed table-bordered" style="">
+        <table class="table table-striped table-hover table-condensed table-bordered" style="">
             <thead>
                 <tr>
                     <td class="col-md-3"><strong>Project</strong></td>
