--- a/ceeq/apps/defects_density/templates/dd_list_single.html
+++ b/ceeq/apps/defects_density/templates/dd_list_single.html
@@ -11,30 +11,34 @@
         <table class="table table-striped table-hover table-condensed table-bordered" style="">
             <thead>
                 <tr>
-                    <td class="col-md-2"><strong>Version</strong></td>
-                    <td class="col-md-2"><strong>Date</strong></td>
-                    <td class="col-md-2"><strong>CDR Feeds</strong></td>
-                    <td class="col-md-2"><strong>CXP</strong></td>
-                    <td class="col-md-2"><strong>Outbound</strong></td>
-                    <td class="col-md-2"><strong>Platform</strong></td>
-                    <td class="col-md-2"><strong>Voice Apps</strong></td>
+                    <td class="col-sm-2"><strong>Version</strong></td>
+                    <td class="col-sm-2"><strong>Date</strong></td>
+                    <td class="col-sm-2"><strong>CXP</strong></td>
+                    <td class="col-sm-2"><strong>Outbound</strong></td>
+                    <td class="col-sm-2"><strong>Platform</strong></td>
+                    <td class="col-sm-2"><strong>Reports</strong></td>
+                    <td class="col-sm-2"><strong>Voice Apps</strong></td>
+                    <td class="col-sm-2"><strong>Voice Slots</strong></td>
+
                     {% if superuser %}
-                        <td class="col-md-2"><strong>Del</strong></td>
+                        <td class="col-sm-2"><strong>Del</strong></td>
                     {% endif %}
                 </tr>
             </thead>
             <tbody>
                 {% for dd in project_dds %}
                     <tr>
-                        <td class="col-md-2">{{ dd.version }}</td>
-                        <td class="col-md-2">{{ dd.created }}</td>
-                        <td class="col-md-2">{{ dd.cdrFeeds }}</td>
-                        <td class="col-md-2">{{ dd.cxp }}</td>
-                        <td class="col-md-2">{{ dd.outbound }}</td>
-                        <td class="col-md-2">{{ dd.platform }}</td>
-                        <td class="col-md-2">{{ dd.voiceApps }}</td>
+                        <td class="col-sm-2">{{ dd.version }}</td>
+                        <td class="col-sm-2">{{ dd.created }}</td>
+                        <td class="col-sm-2">{{ dd.cxp|floatformat:3 }}</td>
+                        <td class="col-sm-2">{{ dd.outbound|floatformat:3 }}</td>
+                        <td class="col-sm-2">{{ dd.platform|floatformat:3 }}</td>
+                        <td class="col-sm-2">{{ dd.reports|floatformat:3 }}</td>
+                        <td class="col-sm-2">{{ dd.voiceApps|floatformat:3 }}</td>
+                        <td class="col-sm-2">{{ dd.voiceSlots|floatformat:3 }}</td>
+
                         {% if superuser %}
-                        <td class="col-md-2"><a href="{% url 'dd_delete' dd.id %}" style="color: red;"><i class="fa fa-trash-o"></i></a> </td>
+                        <td class="col-sm-2"><a href="{% url 'dd_delete' dd.id %}" style="color: red;"><i class="fa fa-trash-o"></i></a> </td>
                         {% endif %}
                     </tr>
                 {% endfor %}
