--- a/ceeq/apps/projects/templates/project_detail.html
+++ b/ceeq/apps/projects/templates/project_detail.html
@@ -100,64 +100,62 @@
             {% if weight_factor %}
                 {% if superuser %}
                     <table class="table table-hover table-striped" id="factor_table" >
-            <thead>
-                <tr>
-                    <th colspan="3" style="text-align: center; color: brown">Weighted Factor</th>
-                    <th colspan="6" style="text-align: center; color: brown">Number of Issues</th>
-                </tr>
-                <tr>
-                    <th style="background-color: lightcyan">Component Name</th>
-                    <th style="background-color: lightcyan">Weight</th>
-                    <th style="background-color: lightcyan">Defects Density</th>
-                    <th style="background-color: lavender; text-align: center">Total</th>
-                    <th style="background-color: lavender; text-align: center">Blocker</th>
-                    <th style="background-color: lavender; text-align: center">Critical</th>
-                    <th style="background-color: lavender; text-align: center">Major</th>
-                    <th style="background-color: lavender; text-align: center">Minor</th>
-                    <th style="background-color: lavender; text-align: center">Trivial</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for component,weight,dd, total, blocker, critical, major, minor, trivial in weight_factor %}
-                    <tr>
-                        <td class="col-sm-3">{{ component }}</td>
-                        <td class="col-sm-2">{{ weight|floatformat:3 }}</td>
-                        <td class="col-sm-2">{{ dd|floatformat:3 }}</td>
-                        <td class="col-sm-1" style="text-align: center">{{ total }}</td>
-                        <td class="col-sm-1" style="text-align: center">{{ blocker }}</td>
-                        <td class="col-sm-1" style="text-align: center">{{ critical }}</td>
-                        <td class="col-sm-1" style="text-align: center">{{ major }}</td>
-                        <td class="col-sm-1" style="text-align: center">{{ minor }}</td>
-                        <td class="col-sm-1" style="text-align: center">{{ trivial }}</td>
-
-                    </tr>
-                {% endfor %}
-
-            </tbody>
-        </table>
-                {% else %}
-                    <table class="table table-hover table-striped" id="factor_table">
                         <thead>
                             <tr>
+                                <th colspan="3" style="text-align: center; color: brown">Weighted Factor</th>
+                                <th colspan="6" style="text-align: center; color: brown">Number of Issues</th>
+                            </tr>
+                            <tr>
                                 <th style="background-color: lightcyan">Component Name</th>
-                                <th style="background-color: lightcyan">Blocker</th>
-                                <th style="background-color: lightcyan">Critical</th>
-                                <th style="background-color: lightcyan">Major</th>
-                                <th style="background-color: lightcyan">Minor</th>
-                                <th style="background-color: lightcyan">Trivial</th>
-                                <th style="background-color: lightcyan">Total</th>
+                                <th style="background-color: lightcyan">Weight</th>
+                                <th style="background-color: lightcyan">Defects Density</th>
+                                <th style="background-color: lavender; text-align: center">Total</th>
+                                <th style="background-color: lavender; text-align: center">Blocker</th>
+                                <th style="background-color: lavender; text-align: center">Critical</th>
+                                <th style="background-color: lavender; text-align: center">Major</th>
+                                <th style="background-color: lavender; text-align: center">Minor</th>
+                                <th style="background-color: lavender; text-align: center">Trivial</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for component,weight,dd, total, blocker, critical, major, minor, trivial in weight_factor %}
+                                <tr>
+                                    <td class="col-sm-3">{{ component }}</td>
+                                    <td class="col-sm-2">{{ weight|floatformat:3 }}</td>
+                                    <td class="col-sm-2">{{ dd|floatformat:3 }}</td>
+                                    <td class="col-sm-1" style="text-align: center">{{ total }}</td>
+                                    <td class="col-sm-1" style="text-align: center">{{ blocker }}</td>
+                                    <td class="col-sm-1" style="text-align: center">{{ critical }}</td>
+                                    <td class="col-sm-1" style="text-align: center">{{ major }}</td>
+                                    <td class="col-sm-1" style="text-align: center">{{ minor }}</td>
+                                    <td class="col-sm-1" style="text-align: center">{{ trivial }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                {% else %}
+                    <table class="table table-hover table-striped" style="width:60%" id="factor_table">
+                        <thead>
+                            <tr>
+                                <th style="background-color: lightcyan; text-align: center;">Component Name</th>
+                                <th style="background-color: lightcyan; text-align: center;">Blocker</th>
+                                <th style="background-color: lightcyan; text-align: center;">Critical</th>
+                                <th style="background-color: lightcyan; text-align: center;">Major</th>
+                                <th style="background-color: lightcyan; text-align: center;">Minor</th>
+                                <th style="background-color: lightcyan; text-align: center;">Trivial</th>
+                                <th style="background-color: lightcyan; text-align: center;">Total</th>
                             </tr>
                         </thead>
                         <tbody>
                             {% for component, weight, dd, total, blocker, critical, major, minor, trivial in weight_factor  %}
                                 <tr>
-                                    <td class="col-md-3">{{ component }}</td>
-                                    <td class="col-md-2">{{ blocker }}</td>
-                                    <td class="col-md-2">{{ critical }}</td>
-                                    <td class="col-md-2">{{ major }}</td>
-                                    <td class="col-md-2">{{ minor }}</td>
-                                    <td class="col-md-2">{{ trivial }}</td>
-                                    <td class="col-md-2">{{ total }}</td>
+                                    <td class="col-sm-3" style="text-align: center">{{ component }}</td>
+                                    <td class="col-sm-2" style="text-align: center">{{ blocker }}</td>
+                                    <td class="col-sm-2" style="text-align: center">{{ critical }}</td>
+                                    <td class="col-sm-2" style="text-align: center">{{ major }}</td>
+                                    <td class="col-sm-2" style="text-align: center">{{ minor }}</td>
+                                    <td class="col-sm-2" style="text-align: center">{{ trivial }}</td>
+                                    <td class="col-sm-3" style="text-align: center">{{ total }}</td>
                                 </tr>
                             {% endfor %}
                         </tbody>
