export chart as jpeg, png or pdf

--- a/ceeq/apps/core/templates/base.html
+++ b/ceeq/apps/core/templates/base.html
@@ -192,6 +192,7 @@
         <script src="http://apps.qaci01.wic.west.com/static/quality/jqueryui/js/jquery-ui-1.10.4.js"></script>
         <script src="http://apps.qaci01.wic.west.com/static/common/placeholders/3.0.0/placeholders.min.js"></script>
         <script src="http://apps.qaci01.wic.west.com/static/common/highcharts/3.0.7/js/highcharts.js"></script>
+        <script src="http://apps.qaci01.wic.west.com/static/common/highcharts/3.0.7/js/exporting.js"></script>
 
         <script>
             $("#search-input").autocomplete({
