--- a/ceeq/apps/defects_density/templates/dd_list_single.html
+++ b/ceeq/apps/defects_density/templates/dd_list_single.html
@@ -11,34 +11,37 @@
         <table class="table table-striped table-hover table-condensed table-bordered" style="">
             <thead>
                 <tr>
-                    <td class="col-sm-2"><strong>Version</strong></td>
-                    <td class="col-sm-2"><strong>Date</strong></td>
-                    <td class="col-sm-2"><strong>CXP</strong></td>
-                    <td class="col-sm-2"><strong>Outbound</strong></td>
-                    <td class="col-sm-2"><strong>Platform</strong></td>
-                    <td class="col-sm-2"><strong>Reports</strong></td>
-                    <td class="col-sm-2"><strong>Voice Apps</strong></td>
-                    <td class="col-sm-2"><strong>Voice Slots</strong></td>
+                    <td style="text-align: center"><strong>Version</strong></td>
+                    <td style="text-align: center"><strong>Date</strong></td>
+                    <td style="text-align: center"><strong>CXP</strong></td>
+                    <td style="text-align: center"><strong>Outbound</strong></td>
+                    <td style="text-align: center"><strong>Platform</strong></td>
+                    <td style="text-align: center"><strong>Reports</strong></td>
+                    <td style="text-align: center"><strong>Voice Apps</strong></td>
+                    <td style="text-align: center"><strong>Voice Slots</strong></td>
 
                     {% if superuser %}
-                        <td class="col-sm-2"><strong>Del</strong></td>
+                        <td style="text-align: center"><strong>Del</strong></td>
                     {% endif %}
                 </tr>
             </thead>
             <tbody>
                 {% for dd in project_dds %}
                     <tr>
-                        <td class="col-sm-2">{{ dd.version }}</td>
-                        <td class="col-sm-2">{{ dd.created }}</td>
-                        <td class="col-sm-2">{{ dd.cxp|floatformat:3 }}</td>
-                        <td class="col-sm-2">{{ dd.outbound|floatformat:3 }}</td>
-                        <td class="col-sm-2">{{ dd.platform|floatformat:3 }}</td>
-                        <td class="col-sm-2">{{ dd.reports|floatformat:3 }}</td>
-                        <td class="col-sm-2">{{ dd.voiceApps|floatformat:3 }}</td>
-                        <td class="col-sm-2">{{ dd.voiceSlots|floatformat:3 }}</td>
+                        <td class="col-sm-2" style="text-align: center">{{ dd.version }}</td>
+                        <td class="col-sm-2" style="text-align: center">{{ dd.created }}</td>
+                        <td class="col-sm-1" style="text-align: center">{{ dd.cxp|floatformat:3 }}</td>
+                        <td class="col-sm-1" style="text-align: center">{{ dd.outbound|floatformat:3 }}</td>
+                        <td class="col-sm-1" style="text-align: center">{{ dd.platform|floatformat:3 }}</td>
+                        <td class="col-sm-1" style="text-align: center">{{ dd.reports|floatformat:3 }}</td>
+                        <td class="col-sm-1" style="text-align: center">{{ dd.voiceApps|floatformat:3 }}</td>
+                        <td class="col-sm-1" style="text-align: center">{{ dd.voiceSlots|floatformat:3 }}</td>
 
                         {% if superuser %}
-                        <td class="col-sm-2"><a href="{% url 'dd_delete' dd.id %}" style="color: red;"><i class="fa fa-trash-o"></i></a> </td>
+                        <td class="col-sm-1" style="text-align: center">
+                            <a href="{% url 'dd_delete' dd.id %}" style="color: red;"><i class="fa fa-trash-o fa-lg"></i></a> |
+                            <a href="#"><i class="fa fa-edit fa-lg"></i> </a>
+                        </td>
                         {% endif %}
                     </tr>
                 {% endfor %}
