--- a/ceeq/apps/defects_density/templates/dd_detail.html
+++ b/ceeq/apps/defects_density/templates/dd_detail.html
@@ -68,7 +68,8 @@
                     <input class="btn btn-primary" type="submit" value="Save" style="width: 100%">
                 </div>
                 <div class="col-md-2">
-                    <input class="btn btn-primary" type="submit" value="Cancel" onclick="return false;" style="width: 100%">
+                    <a href="{% url 'projects' %}" class="btn btn-primary" style="width: 100%">Cancel</a>
+
                 </div>
             </div>
         </form>
