Change component name "Voice Apps" to "Applications"

--- a/ceeq/apps/defects_density/templates/dd_detail.html
+++ b/ceeq/apps/defects_density/templates/dd_detail.html
@@ -50,8 +50,8 @@
             </div>
             <div class="row" style="margin-bottom: 10px;">
                 <div class="col-md-1"></div>
-                <div class="col-md-2" style="text-align: left;font-size: 18px;">Voice Apps</div>
-                <div class="col-md-8">{{ form.voiceApps }}</div>
+                <div class="col-md-2" style="text-align: left;font-size: 18px;">Applications</div>
+                <div class="col-md-8">{{ form.applications }}</div>
             </div>
             <div class="row" style="margin-bottom: 10px;">
                 <div class="col-md-1"></div>
