Use read only account to access JIRA

--- a/ceeq/apps/projects/templates/projects_dd_start.html
+++ b/ceeq/apps/projects/templates/projects_dd_start.html
@@ -82,8 +82,8 @@
                             name: 'Reports',
                             data: data[key]['reports']
                         },{
-                            name: 'VoiceApps',
-                            data: data[key]['voiceApps']
+                            name: 'Applications',
+                            data: data[key]['applications']
                         },{
                             name: 'VoiceSlots',
                             data: data[key]['voiceSlots']
