--- a/ceeq/apps/help/templates/guide.html
+++ b/ceeq/apps/help/templates/guide.html
@@ -98,6 +98,21 @@
                         <p>During the procedure of IVR applications testing, the ration of following components
                         are considered as (2 : 1 : 3 : 3 : 8 : 3): (alphabet order)</p>
                         <ul>
+                            <li>Applications</li>
+                                <ul>
+                                    <li>Design</li>
+                                    <ul>
+                                        <li>Feature</li>
+                                        <li>VUI</li>
+                                    </ul>
+                                    <li>App Code</li>
+                                    <ul>
+                                        <li>Code</li>
+                                        <li>KVPs</li>
+                                    </ul>
+                                    <li>Web Service</li>
+                                    <li>Grammars</li>
+                                </ul>
                             <li>CXP - Customer Experience Portal</li>
                                 <ul>
                                     <li>Real Feed</li>
@@ -127,28 +142,12 @@
                                     <li>Custom Reports</li>
                                     <li>CDR Feeds - Client Detail Reports</li>
                                 </ul>
-                            <li>Voice Apps</li>
-                                <ul>
-                                    <li>Design</li>
-                                    <ul>
-                                        <li>Feature</li>
-                                        <li>VUI</li>
-                                    </ul>
-                                    <li>App Code</li>
-                                    <ul>
-                                        <li>Code</li>
-                                        <li>KVPs</li>
-                                    </ul>
-                                    <li>Web Service</li>
-                                    <li>Grammars</li>
-                                </ul>
                             <li>Voice Slots</li>
                                 <ul>
                                     <li>English</li>
                                     <li>Spanish</li>
                                     <li>Others</li>
                                 </ul>
-
                         </ul>
 
                     </div>
